--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -19,7 +19,8 @@
     "koa": "^2.10.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.7.7"
+    "mongoose": "^5.7.7",
+    "sanitize-html": "^1.20.1"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
