--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@toast-ui/react-editor": "^1.0.1",
     "axios": "^0.19.0",
+    "css-loader": "^3.2.0",
     "immer": "^4.0.2",
+    "qs": "^6.9.0",
+    "quill": "^1.3.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "tui-editor": "^1.4.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -26,6 +32,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
