--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@toast-ui/react-editor": "^1.0.1",
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
     "immer": "^4.0.2",
@@ -12,6 +11,7 @@
     "quill": "^1.3.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-helmet-async": "^1.0.4",
     "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
@@ -19,8 +19,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.1",
-    "styled-components": "^4.4.0",
-    "tui-editor": "^1.4.7"
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
